fix(docs): update custom style config (#1070)

--- a/src/pages/docs/adding-custom-styles.mdx
+++ b/src/pages/docs/adding-custom-styles.mdx
@@ -490,25 +490,24 @@ module.exports = {
       addBase({
         'h1': {
           fontSize: theme('fontSize.2xl'),
-        }
+        },
         'h2': {
           fontSize: theme('fontSize.xl'),
-        }
-      })
+        },
+      });
       addComponents({
         '.card': {
-          backgroundColor: theme('colors.white');
-          borderRadius: theme('borderRadius.lg');
-          padding: theme('spacing.6');
-          boxShadow: theme('boxShadow.xl');
+          backgroundColor: theme('colors.white'),
+          borderRadius: theme('borderRadius.lg'),
+          padding: theme('spacing.6'),
+          boxShadow: theme('boxShadow.xl'),
         }
-      })
-
+      });
       addUtilities({
         '.content-auto': {
           contentVisibility: 'auto',
         }
-      })
+      });
     })
   ]
 }
