--- a/src/pages/blog/headless-ui-v1-4/index.mdx
+++ b/src/pages/blog/headless-ui-v1-4/index.mdx
@@ -41,7 +41,7 @@ Earlier this year we started working on [Tailwind UI Ecommerce](https://tailwind
 
 Here's what we ended up with:
 
-<Tab.Group as="div" className="my-6 bg-gray-800 rounded-md">
+<Tab.Group as="div" className="my-6 bg-gray-800 rounded-xl dark:ring-1 dark:ring-inset dark:ring-white/10">
   <Tab.List className="relative space-x-2 px-4 pt-3">
     <Tab
       className={({ selected }) =>
@@ -63,10 +63,10 @@ Here's what we ended up with:
     </Tab>
   </Tab.List>
   <Tab.Panels>
-    <Tab.Panel className="prose focus:outline-none">
+    <Tab.Panel className="prose focus:outline-none children:!shadow-none children:bg-transparent">
       <ReactExample1 />
     </Tab.Panel>
-    <Tab.Panel className="prose focus:outline-none">
+    <Tab.Panel className="prose focus:outline-none children:!shadow-none children:bg-transparent">
       <VueExample1 />
     </Tab.Panel>
   </Tab.Panels>
@@ -84,7 +84,7 @@ Up until now, there was no way to close a `Disclosure` without clicking the actu
 
 Now you can use `Disclosure.Button` or (`DisclosureButton` in Vue) within your disclosure panel to close the panel, making it easy to wrap up things like links or other buttons so the panel doesn't stay open:
 
-<Tab.Group as="div" className="my-6 bg-gray-800 rounded-md">
+<Tab.Group as="div" className="my-6 bg-gray-800 rounded-xl dark:ring-1 dark:ring-inset dark:ring-white/10">
   <Tab.List className="relative space-x-2 px-4 pt-3">
     <Tab
       className={({ selected }) =>
@@ -106,10 +106,10 @@ Now you can use `Disclosure.Button` or (`DisclosureButton` in Vue) within your d
     </Tab>
   </Tab.List>
   <Tab.Panels>
-    <Tab.Panel className="prose focus:outline-none">
+    <Tab.Panel className="prose focus:outline-none children:!shadow-none children:bg-transparent">
       <ReactExample2 />
     </Tab.Panel>
-    <Tab.Panel className="prose focus:outline-none">
+    <Tab.Panel className="prose focus:outline-none children:!shadow-none children:bg-transparent">
       <VueExample2 />
     </Tab.Panel>
   </Tab.Panels>
@@ -117,7 +117,7 @@ Now you can use `Disclosure.Button` or (`DisclosureButton` in Vue) within your d
 
 The same thing works with `Popover` components, too:
 
-<Tab.Group as="div" className="my-6 bg-gray-800 rounded-md">
+<Tab.Group as="div" className="my-6 bg-gray-800 rounded-xl dark:ring-1 dark:ring-inset dark:ring-white/10">
   <Tab.List className="relative space-x-2 px-4 pt-3">
     <Tab
       className={({ selected }) =>
@@ -139,10 +139,10 @@ The same thing works with `Popover` components, too:
     </Tab>
   </Tab.List>
   <Tab.Panels>
-    <Tab.Panel className="prose focus:outline-none">
+    <Tab.Panel className="prose focus:outline-none children:!shadow-none children:bg-transparent">
       <ReactExample3 />
     </Tab.Panel>
-    <Tab.Panel className="prose focus:outline-none">
+    <Tab.Panel className="prose focus:outline-none children:!shadow-none children:bg-transparent">
       <VueExample3 />
     </Tab.Panel>
   </Tab.Panels>
@@ -150,7 +150,7 @@ The same thing works with `Popover` components, too:
 
 If you need finer control, we also pass a `close` function via the render prop/scoped slot, so you can imperatively close the panel when you need to:
 
-<Tab.Group as="div" className="my-6 bg-gray-800 rounded-md">
+<Tab.Group as="div" className="my-6 bg-gray-800 rounded-xl dark:ring-1 dark:ring-inset dark:ring-white/10">
   <Tab.List className="relative space-x-2 px-4 pt-3">
     <Tab
       className={({ selected }) =>
@@ -172,10 +172,10 @@ If you need finer control, we also pass a `close` function via the render prop/s
     </Tab>
   </Tab.List>
   <Tab.Panels>
-    <Tab.Panel className="prose focus:outline-none">
+    <Tab.Panel className="prose focus:outline-none children:!shadow-none children:bg-transparent">
       <ReactExample4 />
     </Tab.Panel>
-    <Tab.Panel className="prose focus:outline-none">
+    <Tab.Panel className="prose focus:outline-none children:!shadow-none children:bg-transparent">
       <VueExample4 />
     </Tab.Panel>
   </Tab.Panels>
