Fixed "Open/closed state example" with Dark Mode (#1073)
* Fixed summary text almost invisible in Dark Mode

The summary text is almost invisible while in closed state in Dark Mode, Since it's text-gray-900, added dark:text-white.

* Fixed the text being white while open

* Adding the missing change to the example code

* Fixes, can we stack dark:open:utility?

* Fixes

* Final Fixes

* Update hover-focus-and-other-states.mdx

Co-authored-by: Jonathan Reinink <jonathan@reinink.ca>

--- a/src/pages/docs/hover-focus-and-other-states.mdx
+++ b/src/pages/docs/hover-focus-and-other-states.mdx
@@ -859,11 +859,11 @@ Use the `open` modifier to conditionally add styles when a `<details>` or `<dial
 
 <Example hint="Try toggling the disclosure to see the styles change">
   <div class="max-w-lg mx-auto">
-    <details class="open:bg-white open:ring-1 open:ring-black/5 open:shadow-lg p-6 rounded-lg" open>
-      <summary class="text-sm leading-6 text-gray-900 font-semibold select-none">
+    <details class="open:bg-white dark:open:bg-gray-900 open:ring-1 open:ring-black/5 dark:open:ring-white/10 open:shadow-lg p-6 rounded-lg" open>
+      <summary class="text-sm leading-6 text-gray-900 dark:text-white font-semibold select-none">
         Why do they call it Ovaltine?
       </summary>
-      <div class="mt-3 text-sm leading-6 text-gray-600">
+      <div class="mt-3 text-sm leading-6 text-gray-600 dark:text-gray-400">
         <p>The mug is round. The jar is round. They should call it Roundtine.</p>
       </div>
     </details>
@@ -873,11 +873,11 @@ Use the `open` modifier to conditionally add styles when a `<details>` or `<dial
 
 ```html
   <div class="max-w-lg mx-auto p-8">
->   <details class="open:bg-white open:ring-1 open:ring-black/5 open:shadow-lg p-6 rounded-lg" open>
-      <summary class="text-sm leading-6 text-gray-900 font-semibold select-none">
+>   <details class="open:bg-white dark:open:bg-gray-900 open:ring-1 open:ring-black/5 dark:open:ring-white/10 open:shadow-lg p-6 rounded-lg" open>
+      <summary class="text-sm leading-6 text-gray-900 dark:text-white font-semibold select-none">
         Why do they call it Ovaltine?
       </summary>
-      <div class="mt-3 text-sm leading-6 text-gray-600">
+      <div class="mt-3 text-sm leading-6 text-gray-600 dark:text-gray-400">
         <p>The mug is round. The jar is round. They should call it Roundtine.</p>
       </div>
     </details>
