Docs: Add example to safelist responsive variants (#1081)
* Dodcs: Add example to safelist responsive variants

* Update content-configuration.mdx

Co-authored-by: Adam Wathan <adam.wathan@gmail.com>

--- a/src/pages/docs/content-configuration.mdx
+++ b/src/pages/docs/content-configuration.mdx
@@ -336,7 +336,7 @@ module.exports = {
     'text-3xl',
     {
       pattern: /bg-(red|green|blue)-(100|200|300)/,
-      variants: ['hover', 'focus'],
+      variants: ['lg', 'hover', 'focus', 'lg:hover'],
     },
   ],
   // ...
