Fix content-none utility docs
It produces `content: none` *not* `content: ""`

--- a/src/pages/docs/content.mdx
+++ b/src/pages/docs/content.mdx
@@ -9,7 +9,7 @@ import { HoverFocusAndOtherStates } from '@/components/HoverFocusAndOtherStates'
 
 export const classes = {
   utilities: {
-    'content-none': { 'content': '""' }
+    'content-none': { 'content': 'none' }
   }
 }
 
