Remove 'flex-' in the class of arbitrary values. (#1129)

--- a/src/pages/docs/flex-basis.mdx
+++ b/src/pages/docs/flex-basis.mdx
@@ -100,4 +100,4 @@ Learn more about customizing the default theme in the [theme customization](/doc
 
 ### Arbitrary values
 
-<ArbitraryValues property="flex-basis" featuredClass="flex-basis-[14.2857143%]" />
+<ArbitraryValues property="flex-basis" featuredClass="basis-[14.2857143%]" />
