Fix typo in doc (remove extra word) (#1125)

--- a/src/pages/docs/hover-focus-and-other-states.mdx
+++ b/src/pages/docs/hover-focus-and-other-states.mdx
@@ -74,7 +74,7 @@ These modifiers can even be [stacked](#ordering-stacked-modifiers) to target mor
 </button>
 ```
 
-In this guide you'll learn about every modifier available in the framework, how to use with them with your own custom classes, and even how to create your own.
+In this guide you'll learn about every modifier available in the framework, how to use them with your own custom classes, and even how to create your own.
 
 ---
 
