Fix: Docs `cursor-none` image (#1123)
* Fix cursor-none image

* Remove `cursor-none` image

Co-authored-by: Jonathan Reinink <jonathan@reinink.ca>

--- a/src/pages/docs/cursor.mdx
+++ b/src/pages/docs/cursor.mdx
@@ -12,10 +12,13 @@ export const classes = {
   utilities,
   rowStyle: ({ css }) => css,
   preview: (css, { className, utility }) => (
-    <td
-      className={`align-middle ${className}`}
-    >
-      <img className="w-6 h-6 mx-auto drop-shadow" src={`/img/cursors/${utility.substr(1)}.svg`} />
+    <td className={`align-middle ${className}`}>
+      {utility !== '.cursor-none' && (
+        <img
+          className="w-6 h-6 mx-auto drop-shadow"
+          src={`/img/cursors/${utility.substr(1)}.svg`}
+        />
+      )}
     </td>
   ),
 }
