Update browser-support.mdx (#1130)
Install autoprefixer as a development dependency.

--- a/src/pages/docs/browser-support.mdx
+++ b/src/pages/docs/browser-support.mdx
@@ -31,7 +31,7 @@ If not, we recommend that you use [Autoprefixer](https://github.com/postcss/auto
 To use it, install it via npm:
 
 ```shell
-npm install autoprefixer
+npm install -D autoprefixer
 ```
 
 Then add it to the very end of your plugin list in your PostCSS configuration:
