Update link to raw Preflight CSS (#1132)
The link to the raw Preflight CSS file was for v2 of Tailwind. This change updates the link to v3.

--- a/src/pages/docs/preflight.mdx
+++ b/src/pages/docs/preflight.mdx
@@ -22,7 +22,7 @@ Tailwind automatically injects these styles when you include `@tailwind base` in
 
 While most of the styles in Preflight are meant to go unnoticed — they simply make things behave more like you'd expect them to — some are more opinionated and can be surprising when you first encounter them.
 
-For a complete reference of all the styles applied by Preflight, [see the stylesheet](https://unpkg.com/tailwindcss@^2/dist/base.css).
+For a complete reference of all the styles applied by Preflight, [see the stylesheet](https://unpkg.com/tailwindcss@^3/src/css/preflight.css).
 
 ---
 
