fix: anchor for merging logic at presets doc (#1141)

--- a/src/pages/docs/presets.mdx
+++ b/src/pages/docs/presets.mdx
@@ -74,7 +74,7 @@ module.exports = {
 }
 ```
 
-As you can see, presets can contain all of the configuration options you're used to, including theme overrides and extensions, adding plugins, configuring a prefix, and so on. Read about [how configurations are merged](#how-configurations-are-merged) for more details.
+As you can see, presets can contain all of the configuration options you're used to, including theme overrides and extensions, adding plugins, configuring a prefix, and so on. Read about [how configurations are merged](#merging-logic-in-depth) for more details.
 
 Assuming this preset was saved at `./my-preset.js`, you would use it by adding it to the `tailwind.config.js` file in your actual project under the `presets` key:
 
