--- a/src/pages/docs/gradient-color-stops.mdx
+++ b/src/pages/docs/gradient-color-stops.mdx
@@ -137,15 +137,15 @@ Gradients fade out to transparent by default, without requiring you to add `to-t
 
 <HoverFocusAndOtherStates featuredClass="from-pink-500">
 
-```html
-<template preview>
+<Example>
   <div class="flex justify-center">
     <button type="button" class="bg-gradient-to-r from-teal-400 to-blue-500 hover:from-pink-500 hover:to-orange-500 text-white font-semibold px-6 py-3 rounded-md">
       Hover me
     </button>
   </div>
-</template>
+</Example>
 
+```html
 <button type="button" class="bg-gradient-to-r from-green-400 to-blue-500 **hover:from-pink-500 hover:to-yellow-500** ...">
   Hover me
 </button>
