Add video to upgrade guide

--- a/src/pages/docs/upgrade-guide.mdx
+++ b/src/pages/docs/upgrade-guide.mdx
@@ -7,6 +7,15 @@ Tailwind CSS v3.0 is a major update to the framework with a brand new internal e
 
 We take stability very seriously and have worked hard to make any breaking changes as painless as possible. For most projects, upgrading to Tailwind CSS v3.0 should take less than 30 minutes.
 
+<div className="aspect-w-16 aspect-h-9 my-12 rounded-lg overflow-hidden">
+  <iframe
+    src="https://www.youtube.com/embed/waoOK5s9ypc"
+    frameBorder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowFullScreen
+  ></iframe>
+</div>
+
 To learn more about what's new in Tailwind CSS v3.0, read the [Tailwind CSS v3.0 announcement](/blog/tailwindcss-v3) on our blog.
 
 ---
