Add note about previous sibling

--- a/src/pages/docs/hover-focus-and-other-states.mdx
+++ b/src/pages/docs/hover-focus-and-other-states.mdx
@@ -387,6 +387,17 @@ This makes it possible to do all sorts of neat tricks, like [floating labels](ht
 
 This pattern works with every pseudo-class modifier, for example `peer-focus`, `peer-required`, and `peer-disabled`.
 
+It's important to note that the `peer` marker can only be used on _previous_ siblings because of how the [general sibling combinator](https://developer.mozilla.org/en-US/docs/Web/CSS/General_sibling_combinator) works in CSS.
+
+<TipBad>Won't work, only previous siblings can be marked as peers</TipBad>
+
+```html
+<label>
+  <span class="**peer-invalid:text-red-500** ...">Email</span>
+  <input type="email" class="**peer** ..."/>
+</label>
+```
+
 ---
 
 ## Pseudo-elements
