Grammar fix in Prettier plugin blog post

--- a/src/pages/blog/automatic-class-sorting-with-prettier/index.mdx
+++ b/src/pages/blog/automatic-class-sorting-with-prettier/index.mdx
@@ -44,7 +44,7 @@ This plugin follows Prettier's [autoloading convention](https://prettier.io/docs
 
 ## How classes are sorted
 
-At it's core, all this plugin does is organize your classes in the same order that Tailwind orders them in your CSS.
+At its core, all this plugin does is organize your classes in the same order that Tailwind orders them in your CSS.
 
 This means that any classes in the base layer will be sorted first, followed by classes in the components layer, and then finally classes in the utilities layer.
 
