9 default font weight instead of 10 (#1174)
* 9 default font weight instead of 10

* Use "nine" instead of "9"

Co-authored-by: Jonathan Reinink <jonathan@reinink.ca>

--- a/src/pages/docs/font-weight.mdx
+++ b/src/pages/docs/font-weight.mdx
@@ -77,7 +77,7 @@ Control the font weight of an element using the `font-{weight}` utilities.
 
 ### Customizing your theme
 
-By default, Tailwind provides 10 `font-weight` utilities. You change, add, or remove these by editing the `theme.fontWeight` section of your Tailwind config.
+By default, Tailwind provides nine `font-weight` utilities. You change, add, or remove these by editing the `theme.fontWeight` section of your Tailwind config.
 
 ```diff-js tailwind.config.js
   module.exports = {
