Replace text-normal with text-base (#1178)
* replace text-normal with text-base

* Remove "text-base" class

Co-authored-by: Jonathan Reinink <jonathan@reinink.ca>

--- a/src/pages/docs/list-style-position.mdx
+++ b/src/pages/docs/list-style-position.mdx
@@ -20,7 +20,7 @@ Control the position of the markers and text indentation in a list using the `li
     <div class="relative">
       <div class="absolute left-8 -top-8 -bottom-8 w-px bg-pink-400/40 dark:bg-rose-400/20"></div>
       <p class="font-medium text-sm text-slate-500 font-mono mb-3 ml-8 dark:text-slate-400">list-inside</p>
-      <ul class="list-disc list-inside text-normal text-slate-700 bg-white rounded-xl shadow-lg ring-1 ring-slate-900/5 p-4 pl-8 dark:bg-slate-800 dark:ring-0 dark:highlight-white/5 dark:text-slate-400">
+      <ul class="list-disc list-inside text-slate-700 bg-white rounded-xl shadow-lg ring-1 ring-slate-900/5 p-4 pl-8 dark:bg-slate-800 dark:ring-0 dark:highlight-white/5 dark:text-slate-400">
         <li>5 cups chopped Porcini mushrooms</li>
         <li>1/2 cup of olive oil</li>
         <li>3lb of celery</li>
@@ -29,7 +29,7 @@ Control the position of the markers and text indentation in a list using the `li
     <div class="relative">
       <div class="absolute left-8 -top-0 sm:-top-8 -bottom-8 w-px bg-pink-400/40 dark:bg-rose-400/20"></div>
       <p class="font-medium text-sm text-slate-500 font-mono mb-3 ml-8 dark:text-slate-400">list-outside</p>
-      <ul class="list-disc list-outside text-normal text-slate-700 bg-white rounded-xl shadow-lg ring-1 ring-slate-900/5 p-4 pl-8 dark:bg-slate-800 dark:ring-0 dark:highlight-white/5 dark:text-slate-400">
+      <ul class="list-disc list-outside text-slate-700 bg-white rounded-xl shadow-lg ring-1 ring-slate-900/5 p-4 pl-8 dark:bg-slate-800 dark:ring-0 dark:highlight-white/5 dark:text-slate-400">
         <li>5 cups chopped Porcini mushrooms</li>
         <li>1/2 cup of olive oil</li>
         <li>3lb of celery</li>
