--- a/src/pages/docs/line-height.mdx
+++ b/src/pages/docs/line-height.mdx
@@ -20,19 +20,19 @@ Use the `leading-none`, `leading-tight`, `leading-snug`, `leading-normal`, `lead
   <div class="flex flex-col gap-8">
     <div>
       <span class="font-medium text-sm text-slate-500 font-mono mb-3 dark:text-slate-400">leading-normal</span>
-      <p class="leading-normal text-normal text-slate-900 dark:text-slate-200">
+      <p class="leading-normal text-slate-900 dark:text-slate-200">
         So I started to walk into the water. I won't lie to you boys, I was terrified. But I pressed on, and as I made my way past the breakers a strange calm came over me. I don't know if it was divine intervention or the kinship of all living things but I tell you Jerry at that moment, I <em>was</em> a marine biologist.
       </p>
     </div>
     <div>
       <span class="font-medium text-sm text-slate-500 font-mono mb-3 dark:text-slate-400">leading-relaxed</span>
-      <p class="leading-relaxed text-normal text-slate-900 dark:text-slate-200">
+      <p class="leading-relaxed text-slate-900 dark:text-slate-200">
         So I started to walk into the water. I won't lie to you boys, I was terrified. But I pressed on, and as I made my way past the breakers a strange calm came over me. I don't know if it was divine intervention or the kinship of all living things but I tell you Jerry at that moment, I <em>was</em> a marine biologist.
       </p>
     </div>
     <div>
       <span class="font-medium text-sm text-slate-500 font-mono mb-3 dark:text-slate-400">leading-loose</span>
-      <p class="leading-loose text-normal text-slate-900 dark:text-slate-200">
+      <p class="leading-loose text-slate-900 dark:text-slate-200">
         So I started to walk into the water. I won't lie to you boys, I was terrified. But I pressed on, and as I made my way past the breakers a strange calm came over me. I don't know if it was divine intervention or the kinship of all living things but I tell you Jerry at that moment, I <em>was</em> a marine biologist.
       </p>
     </div>
@@ -53,19 +53,19 @@ Use the `leading-{size}` utilities to give an element a fixed line-height, irres
   <div class="flex flex-col gap-8">
     <div>
       <span class="font-medium text-sm text-slate-500 font-mono mb-3 dark:text-slate-400">leading-6</span>
-      <p class="leading-6 text-normal text-slate-900 dark:text-slate-200">
+      <p class="leading-6 text-slate-900 dark:text-slate-200">
         So I started to walk into the water. I won't lie to you boys, I was terrified. But I pressed on, and as I made my way past the breakers a strange calm came over me. I don't know if it was divine intervention or the kinship of all living things but I tell you Jerry at that moment, I <em>was</em> a marine biologist.
       </p>
     </div>
     <div>
       <span class="font-medium text-sm text-slate-500 font-mono mb-3 dark:text-slate-400">leading-7</span>
-      <p class="leading-7 text-normal text-slate-900 dark:text-slate-200">
+      <p class="leading-7 text-slate-900 dark:text-slate-200">
         So I started to walk into the water. I won't lie to you boys, I was terrified. But I pressed on, and as I made my way past the breakers a strange calm came over me. I don't know if it was divine intervention or the kinship of all living things but I tell you Jerry at that moment, I <em>was</em> a marine biologist.
       </p>
     </div>
     <div>
       <span class="font-medium text-sm text-slate-500 font-mono mb-3 dark:text-slate-400">leading-8</span>
-      <p class="leading-8 text-normal text-slate-900 dark:text-slate-200">
+      <p class="leading-8 text-slate-900 dark:text-slate-200">
         So I started to walk into the water. I won't lie to you boys, I was terrified. But I pressed on, and as I made my way past the breakers a strange calm came over me. I don't know if it was divine intervention or the kinship of all living things but I tell you Jerry at that moment, I <em>was</em> a marine biologist.
       </p>
     </div>
