--- a/src/pages/docs/content-configuration.mdx
+++ b/src/pages/docs/content-configuration.mdx
@@ -420,7 +420,7 @@ Or creating a new folder mid-project that wasn't covered originally and forgetti
     content: [
       './pages/**/*.{html,js}',
       './components/**/*.{html,js}',
-+     './util/**/*.{html,js,js}'
++     './util/**/*.{html,js}'
     ],
     // ...
   }
