Fix customizing-colors-mdx background-color link (#1186)

--- a/src/pages/docs/customizing-colors.mdx
+++ b/src/pages/docs/customizing-colors.mdx
@@ -80,7 +80,7 @@ module.exports = {
 }
 ```
 
-By default, these colors will be made available everywhere in the framework where you use colors, like the [text color](/docs/text-color) utilities, [border color](/docs/border-color) utilities, [background color](/docs/text-color) utilities, and more.
+By default, these colors will be made available everywhere in the framework where you use colors, like the [text color](/docs/text-color) utilities, [border color](/docs/border-color) utilities, [background color](/docs/background-color) utilities, and more.
 
 ```html
 <div class="**bg-midnight** **text-tahiti**">
