Fix class typo (#1189)

--- a/src/pages/docs/scroll-snap-type.mdx
+++ b/src/pages/docs/scroll-snap-type.mdx
@@ -87,7 +87,7 @@ Use the `snap-mandatory` utility to force a snap container to always come to res
     <div class="absolute top-0 bottom-0 left-1/2 border-l border-indigo-500"></div>
   </div>
   <!-- Contents -->
-  <div class="relative w-full flex gap-6 snap-x scroll-mandatory overflow-x-auto pb-14">
+  <div class="relative w-full flex gap-6 snap-x snap-mandatory overflow-x-auto pb-14">
     <div class="snap-center shrink-0">
       <div class="shrink-0 w-4 sm:w-48"></div>
     </div>
