Update drop-shadow.mdx (#1194)
Hello,
I am quite new to tailwind and it was not quite straightforward to understand how to create a custom rule that will combine 2 drop shadows rules into one.
Honestly, I discovered it by doing a leap of faith and it worked, not sure if it's documented somewhere or not, but here you have a proposal for documentation update 🙂🙏

--- a/src/pages/docs/drop-shadow.mdx
+++ b/src/pages/docs/drop-shadow.mdx
@@ -100,6 +100,10 @@ By default, Tailwind includes a handful of general purpose `dropShadow` utilitie
       extend: {
 +       dropShadow: {
 +         '3xl': '0 35px 35px rgba(0, 0, 0, 0.25)',
++         '4xl': [
++             '0 35px 35px rgba(0, 0, 0, 0.25)',
++             '0 45px 65px rgba(0, 0, 0, 0.15)'
++         ]
 +       }
       }
     }
