--- a/src/pages/docs/font-family.mdx
+++ b/src/pages/docs/font-family.mdx
@@ -112,7 +112,7 @@ Learn more about customizing the default theme in the [theme customization](/doc
 
 <ArbitraryValues property="font-family" featuredClass="font-['Open_Sans']" element="p" />
 
-### Customizing the default font family
+### Customizing the default font
 
 For convenience, [Preflight](/docs/preflight) sets the font family on the `html` element to match your configured `sans` font, so one way to change the default font for your project is to customize the `sans` key in your `fontFamily` configuration:
 
